umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_chem3d_Carboplatin.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 25
bond_count: 24
sum_formula: C6H12N2O4Pt
graph6: Xs?GOO??G?_@?@??_?G?a??C??G??g??O??G??@???G???O???_
