umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_chem3d_Cyclodextrin.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 147
bond_count: 154
sum_formula: C42H70O35
graph6: ~?ARhCG?C@?G?_@????_?G?@??C??G?????C??@???G???_??@????????_???G???@????C????G?????????C????@?????G?????_????@????????????_?????G?????@??????C??????I??????@???????O????A?a???????G???????G???????G??????_C???????P????????G???????@????????@????????@???????C?_???????AG????????@?????????A?????????C????????_C?????????a??????????_?????????A??????????G????????A?O?????????CO??????????G??????????@???????????G?????????C?_??????????P???????????@????????????O???????????C??????????C?_???????????a????????????C?????C????????????A?????????????_????????????C?????????????O?????????????_????????????@??????????????_?????????????G?????????????@??????????????C??????????????G??????????????C??????????????A???????????????_??????????????C???????????????O???????????????_??????????????@????????????????_???????????????G???????????????@????????????????C????????????????G????????????????G????????????????G????????????????A?????????????????O????????????????@?????????????????A?????????????????A?????????????????@??????????????????_?????????????????C??????????????????O??????????????????_??????????????????_??????????????????O??????????????????C??????????????????@???????????????????C???????????????????G???????????????????G???????????????????C???????????????????@????????????????????G???????????????????@????????????????????A????????????????????A?????????????????????O????????????????????C?????????????????????_?????????????????????O?????????????????????_?????????????????????_?????????????????????C?????????????????????@??????????????????????G??????????????????????G??????????????????????O??????????????????????O??????????????????????A???????????????????????_??????????????????????C???????????????????????C???????????????????????G???????????????????????G???????????????????????@?????????????_??????????????????????
