umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_chem3d_naphthalene.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 18
bond_count: 19
sum_formula: C10H8
graph6: QhEG_C@AK?G?G?@??O?A??G??O?
