umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_chemdoodle_aspirin.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 21
bond_count: 21
sum_formula: C9H8O4
graph6: T?_GOGA?ZGQ??@?_?G?@??C??A??C??C@???
