umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_chemdoodle_ddt_3D.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 28
bond_count: 29
sum_formula: C14H9Cl5
graph6: "[???GJc?_A?O?O?C?@??G??_O@OO@OG???O??A???G???O???O???G???A????O?"
